kubernetes/components/cert-manager/base/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: cert-manager
  labels:
    pod-security.kubernetes.io/enforce: privileged
