kubernetes/components/cert-manager/base/kyverno-defaults.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: mutate-certificates
  annotations:
    policies.kyverno.io/title: Mutate Certificates
    policies.kyverno.io/category: Cert-Manager
    policies.kyverno.io/subject: Certificate
    policies.kyverno.io/description: >-
      This policy sets default values for cert-manager Certificate resources
      if they are not specified.

spec:
  # Non-blocking to prevent outages if webhook fails
  failurePolicy: Ignore
  rules:
    # Set a sane default for the history field if not already present
    - name: set-revisionHistoryLimit
      match:
        any:
          - resources:
              kinds:
                - Certificate
      mutate:
        patchStrategicMerge:
          spec:
            # +(...) This is the clever syntax for if not already set
            +(revisionHistoryLimit): 2

    # Set rotation to always if not already set
    - name: set-privateKey-rotationPolicy
      match:
        any:
          - resources:
              kinds:
                - Certificate
      mutate:
        patchStrategicMerge:
          spec:
            privateKey:
              +(rotationPolicy): Always

    # Set private key details for algorithm and size
    - name: set-privateKey-details
      match:
        any:
          - resources:
              kinds:
                - Certificate
      mutate:
        patchStrategicMerge:
          spec:
            privateKey:
              +(algorithm): ECDSA
              +(size): 256
              +(encoding): PKCS1
